[workspace]

members = [
  "postgrpc",
  "postguard",
]

[patch.crates-io.tokio-postgres]
# git = "https://github.com/sfackler/rust-postgres.git"
path = "/home/alex/Code/OpenSource/rust-postgres/tokio-postgres"

[patch.crates-io.postgres-types]
# git = "https://github.com/sfackler/rust-postgres.git"
path = "/home/alex/Code/OpenSource/rust-postgres/postgres-types"

[patch.crates-io.postgres-protocol]
# git = "https://github.com/sfackler/rust-postgres.git"
path = "/home/alex/Code/OpenSource/rust-postgres/postgres-protocol"
