[workspace]

members = [
  "postgrpc",
  "postguard",
]

[patch.crates-io.tokio-postgres]
git = "https://github.com/sfackler/rust-postgres.git"

[patch.crates-io.postgres-types]
git = "https://github.com/sfackler/rust-postgres.git"

[patch.crates-io.postgres-protocol]
git = "https://github.com/sfackler/rust-postgres.git"
