[package]
name = "postgres-role-json-pool"
version = "0.1.0"
authors = ["Alex Pearson <alex@platter.dev>"]
edition = "2018"
description = "Postgres connection pool that keys off of ROLE and returns JSON"

[dependencies]
async-trait = "0.1.51"
bytes = "1.1.0"
deadpool = "0.8.2"
deadpool-postgres = "0.9.0"
futures-core = "0.3.17"
pin-project-lite = "0.2.7"
serde_json = "1.0.68"
thiserror = "1.0.29"
tracing = "0.1.26"

[dependencies.native-tls]
optional = true
version = "0.2.8"

[dependencies.postgres-native-tls]
optional = true
version = "0.5.0"

[dependencies.postgres-pool]
path = "../postgres-pool"

[dependencies.serde]
features = ["derive"]
version = "1.0.126"

[dependencies.tokio-postgres]
features = ["with-serde_json-1"]
version = "0.7.2"

[features]
default = []
ssl-native-tls = ["native-tls", "postgres-native-tls"]
