[package]
name = "postgres-role-json-pool"
version = "0.1.0"
authors = ["Alex Pearson <alex@platter.dev>"]
edition = "2021"
description = "Postgres connection pool that keys off of ROLE and returns JSON"

[dependencies]
async-trait = "0.1.57"
bytes = "1.2.1"
deadpool = "0.9.5"
deadpool-postgres = "0.10.2"
futures-core = "0.3.21"
pin-project-lite = "0.2.9"
serde_json = "1.0.83"
thiserror = "1.0.32"
tracing = "0.1.36"

[dependencies.native-tls]
optional = true
version = "0.2.10"

[dependencies.postgres-native-tls]
optional = true
version = "0.5.0"

[dependencies.postgres-pool]
path = "../postgres-pool"

[dependencies.serde]
features = ["derive"]
version = "1.0.142"

[dependencies.tokio-postgres]
features = ["with-serde_json-1"]
version = "0.7.6"

[features]
default = []
ssl-native-tls = ["native-tls", "postgres-native-tls"]
