[package]
name = "postgres-services"
version = "0.1.0"
authors = ["Alex Pearson <alex@platter.dev>"]
edition = "2018"
description = "Request + Response interfaces for Postgres connection pools"

[dependencies]
tracing = "0.1.26"
thiserror = "1.0.29"
uuid = "0.8.2"

[dependencies.http]
optional = true
version = "0.2.5"

[dependencies.hyper]
optional = true
version = "0.14.13"

[dependencies.postgres-transaction-pool]
optional = true
path = "../postgres-transaction-pool"

[dependencies.postgres-pool]
path = "../postgres-pool"

[dependencies.serde]
optional = true
features = ["derive"]
version = "1.0.130"

[dependencies.serde_json]
optional = true
version = "1.0.68"

[dependencies.tower]
optional = true
features = ["steer", "util"]
version = "0.4.9"

[features]
default = ["http-service"] # FIXME
transaction = ["postgres-transaction-pool"]
http-service = ["tower", "hyper", "http", "serde", "serde_json"]
grpc-service = [] # FIXME: port from postgrpc
