[package]
name = "postgres-services"
version = "0.1.0"
authors = ["Alex Pearson <alex@platter.dev>"]
edition = "2021"
description = "Request + Response interfaces for Postgres connection pools"

[dependencies]
tracing = "0.1.36"
thiserror = "1.0.32"
uuid = "1.1.2"

[dependencies.postgres-transaction-pool]
optional = true
path = "../postgres-transaction-pool"

[dependencies.postgres-pool]
path = "../postgres-pool"

[features]
default = []
transaction = ["postgres-transaction-pool"]
