[package]
name = "postgres-transaction-pool"
version = "0.1.0"
authors = ["Alex Pearson <alex@platter.dev>"]
edition = "2021"
description = "Distributed transaction pool for Postgres"

[dependencies]
async-trait = "0.1.57"
futures-core = "0.3.21"
thiserror = "1.0.32"
tracing = "0.1.36"

[dependencies.postgres-pool]
path = "../postgres-pool"

[dependencies.tokio]
default-features = false
features = ["rt", "sync", "time"]
version = "1.20.1"

[dependencies.uuid]
features = ["v4"]
version = "1.1.2"
