[package]
name = "postgrpc-build"
version = "0.1.0"
edition = "2021"

[dependencies]
tempfile = "3.3.0"
tonic-build = "0.8.4"
once_cell = "1.16.0"

[dependencies.postgres]
version = "0.19.4"
optional = true

[dependencies.prost]
git = "https://github.com/nswarm/prost.git"
branch = "extensions"
version = "0.10.1" 

[dependencies.prost-build]
git = "https://github.com/nswarm/prost.git"
branch = "extensions"
version = "0.10.1" 

[dependencies.prost-types]
git = "https://github.com/nswarm/prost.git"
branch = "extensions"
version = "0.10.1" 

[features]
default = ["postgres"]
