[package]
name = "postgrpc-build"
version = "0.1.0"
edition = "2021"
autoexamples = false

[dependencies]
tempfile = "3.3.0"
once_cell = "1.16.0"
syn = "1.0.105"
prettyplease = "0.1.21"
proc-macro2 = "1.0.47"
quote = "1.0.21"
ouroboros = "0.15.5"

[dependencies.native-tls]
optional = true
version = "0.2.11"

[dependencies.postgres]
version = "0.19.4"
optional = true

[dependencies.postgres-native-tls]
optional = true
version = "0.5.0"

[dependencies.prost]
git = "https://github.com/NAlexPear/prost.git"
branch = "extensions"
version = "0.11.3" 

[dependencies.prost-build]
git = "https://github.com/NAlexPear/prost.git"
branch = "extensions"
version = "0.11.3" 

[dependencies.prost-types]
git = "https://github.com/NAlexPear/prost.git"
branch = "extensions"
version = "0.11.2" 

[dependencies.tonic-build]
git = "https://github.com/NAlexPear/tonic.git"
branch = "extensions"
version = "0.8.4"

[features]
default = [
  "validation",
  "ssl-native-tls"
]

ssl-native-tls = [
  "native-tls",
  "postgres-native-tls"
]

validation = ["postgres"]
