[package]
name = "postgrpc"
version = "0.1.0"
authors = ["Alex Pearson <alex@platter.dev>"]
edition = "2021"
description = "A JSON-transcoding-ready gRPC server for querying Postgres"

[lib]
path = "src/lib.rs"

[[bin]]
name = "postgrpc"
path = "src/main.rs"
doc = false
required-features = ["server"]

[build-dependencies]
pbjson-build = "0.4.0"
tonic-build = "0.8.0"

[dependencies]
bytes = "1.2.1"
futures-util = "0.3.21"
prost = "0.11.0"
thiserror = "1.0.32"
tokio-stream = "0.1.9"
tracing = "0.1.36"
pbjson = "0.4.0"
pbjson-types = "0.4.0"
serde_json = "1.0.83"
num = "0.4.0"

[dependencies.arc-swap]
optional = true
version = "1.5.1"

[dependencies.deadpool-postgres]
optional = true
features = ["serde"]
path = "/home/alex/Code/OpenSource/deadpool/postgres"
version = "0.10.2"

[dependencies.envy]
optional = true
version = "0.4.2"

[dependencies.native-tls]
optional = true
version = "0.2.10"

[dependencies.num_cpus]
optional = true
version = "1.13.1"

[dependencies.pin-project-lite]
optional = true
version = "0.2.9"

[dependencies.postgres_array]
path = "/home/alex/Code/OpenSource/rust-postgres-array"
version = "0.11.0"

[dependencies.postgres-native-tls]
optional = true
git = "https://github.com/sfackler/rust-postgres.git"

[dependencies.serde]
features = ["derive"]
version = "1.0.143"

[dependencies.tokio]
default-features = false
features = ["macros", "signal", "rt-multi-thread"]
version = "1.20.1"

[dependencies.tokio-postgres]
features = ["with-serde_json-1"]
git = "https://github.com/sfackler/rust-postgres.git"

[dependencies.tonic]
default-features = false
features = ["codegen", "prost", "transport"]
version = "0.8.0"

[dependencies.tonic-health]
optional = true
version = "0.7.0"

[dependencies.tonic-reflection]
optional = true
version = "0.5.0"

[dependencies.tower-http]
default-features = false
features = ["trace"]
version = "0.3.4"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.15"

[dependencies.uuid]
optional = true
features = ["v4"]
version = "1.1.2"

[features]
default = ["server", "transaction", "ssl-native-tls", "health", "shared_connection_pool", "reflection", "role-header"]
transaction = ["uuid"]
ssl-native-tls = ["native-tls", "postgres-native-tls"]
server = ["envy"]
deadpool = ["deadpool-postgres", "pin-project-lite", "num_cpus"]
shared_connection_pool = ["arc-swap", "pin-project-lite"]
health = ["tonic-health"]
reflection = ["tonic-reflection"]
role-header = []

# TODO: features
# - channels (enable LISTEN + NOTIFY based channels)
# - json (enable native JSON transcoding)
# - lib-features: valuable support (and associated deep instrumentation)
