[package]
name = "postgrpc"
version = "0.1.2"
authors = ["Alex Pearson <alex@platter.dev>"]
edition = "2021"
license = "MIT"
description = "A JSON-transcoding-ready gRPC server for querying Postgres databases"
keywords = ["postgres", "json", "grpc", "grpc-web"]
homepage = "https://github.com/boilerplatter/postgrpc"
repository = "https://github.com/boilerplatter/postgrpc"
readme = "README.md"

[badges.maintenance]
status = "actively-developed"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false
path = "src/lib.rs"
required-features = ["codegen"]

[[bin]]
name = "postgrpc"
path = "src/main.rs"
doc = false
required-features = ["server", "deadpool"]

[build-dependencies.pbjson-build]
git = "https://github.com/NAlexPear/pbjson.git"
branch = "extensions"
version = "0.5.1"

[build-dependencies.tonic-build]
git = "https://github.com/NAlexPear/tonic.git"
branch = "extensions"
version = "0.8.4"

[dependencies]
bytes = "1.3.0"
futures-util = "0.3.25"
num = "0.4.0"
postgres_array = "0.11.1"
serde_json = "1.0.89"
thiserror = "1.0.37"
tokio-stream = "0.1.11"
tracing = "0.1.37"

[dependencies.pbjson]
git = "https://github.com/NAlexPear/pbjson.git"
branch = "extensions"
version = "0.5.1"

[dependencies.pbjson-types]
git = "https://github.com/NAlexPear/pbjson.git"
branch = "extensions"
version = "0.5.1"

[dependencies.deadpool-postgres]
optional = true
features = ["serde"]
version = "0.10.3"

[dependencies.envy]
optional = true
version = "0.4.2"

[dependencies.native-tls]
optional = true
version = "0.2.11"

[dependencies.num_cpus]
optional = true
version = "1.14.0"

[dependencies.pin-project-lite]
optional = true
version = "0.2.9"

[dependencies.postgres-native-tls]
optional = true
version = "0.5.0"

[dependencies.prost]
git = "https://github.com/NAlexPear/prost.git"
branch = "extensions"
version = "0.11.3"

[dependencies.serde]
features = ["derive"]
version = "1.0.148"

[dependencies.tokio]
default-features = false
features = ["macros", "signal", "rt-multi-thread"]
version = "1.22.0"

[dependencies.tokio-postgres]
features = ["with-serde_json-1"]
version = "0.7.7"

[dependencies.tonic]
default-features = false
features = ["codegen", "prost", "transport"]
git = "https://github.com/NAlexPear/tonic.git"
branch = "extensions"
version = "0.8.3"

[dependencies.tonic-health]
optional = true
git = "https://github.com/NAlexPear/tonic.git"
branch = "extensions"
version = "0.8.0"

[dependencies.tonic-reflection]
optional = true
git = "https://github.com/NAlexPear/tonic.git"
branch = "extensions"
version = "0.6.0"

[dependencies.tower-http]
default-features = false
features = ["trace"]
version = "0.3.4"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.16"

[dependencies.uuid]
optional = true
features = ["v4"]
version = "1.2.2"

[features]
default = [
  "server",
  "postgres",
  "transaction",
  "ssl-native-tls",
  "health",
  "deadpool",
  "reflection", 
  "role-header"
]

deadpool = [
  "deadpool-postgres",
  "pin-project-lite",
  "num_cpus"
]

ssl-native-tls = [
  "native-tls",
  "postgres-native-tls"
]

postgres = [] # FIXME: pare down dependencies here
transaction = ["uuid"]
server = ["envy"]
health = ["tonic-health"]
reflection = ["tonic-reflection"]
role-header = []
codegen = []

# TODO: features
# - gRPC-web (again)
# - channels (LISTEN + NOTIFY)
# - watch-able materialized views
# - server log output runtime configuration
# - native json transcoding
