[package]
name = "postguard"
version = "0.1.0"
edition = "2021"
description = "Test Postgres-compatible statements against a set of CORS-like rules"
license = "MIT"
readme = "README.md"
keywords = ["postgres", "sql"]
documentation = "https://docs.rs/postguard"
repository = "https://github.com/boilerplatter/postgrpc#postguard"

[badges.maintenance]
status = "actively-developed"

[dependencies]
Inflector = "0.11.4"
libpgquery-sys = "0.1.0"
thiserror = "1.0.32"
tracing = "0.1.36"

[dev-dependencies]
once_cell = "1.13.1"
serde_json = "1.0.83"
tracing-test = "0.2.3"

[dev-dependencies.serde]
features = ["derive"]
version = "1.0.143"
