[package]
name = "postrust"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.1"
envy = "0.4.2"
bytes = "1.1.0"
byteorder = "1.4.3"
memchr = "2.4.1"
futures-core = "0.3.17"
pin-project-lite = "0.2.7"
postgres-protocol = "0.6.2"
 
[dependencies.futures-util]
features = ["sink"]
version= "0.3.17"

[dependencies.postguard]
path = "../postguard"
version = "0.1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.130"

[dependencies.tokio]
default-features = false
features = ["net", "macros", "rt-multi-thread", "signal", "io-util"]
version = "1.13.0"

[dependencies.tokio-stream]
features = ["sync"]
version = "0.1.8"

[dependencies.tokio-util]
features = ["codec"]
version = "0.6.9"

[features]
