[package]
name = "postrust"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.30"
tracing = "0.1.29"
envy = "0.4.2"
bytes = "1.1.0"
byteorder = "1.4.3"
memchr = "2.4.1"
futures-core = "0.3.19"
pin-project-lite = "0.2.8"
postgres-protocol = "0.6.3"
once_cell = "1.9.0"
 
[dependencies.futures-util]
features = ["sink"]
version= "0.3.19"

[dependencies.postguard]
path = "../postguard"
version = "0.1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0.133"

[dependencies.tokio]
default-features = false
features = ["net", "macros", "rt-multi-thread", "signal", "io-util", "parking_lot", "time"]
version = "1.15.0"

[dependencies.tokio-util]
features = ["codec"]
version = "0.6.9"

[dependencies.tracing-subscriber]
features = ["env-filter"]
version = "0.3.6"

[features]
